--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -209,6 +209,7 @@
   "current_quantity": "Trenutna količina",
   "current_version": "Trenutna verzija",
   "dashboard": "Kontrolna ploča",
+  "dashboard_welcome_title": "Welcome to Phoenix! Your recent account balances will appear here.",
   "data": "Podaci",
   "data_is_encrypted": "Podaci su zaštićeni.",
   "date": "Datum",
@@ -245,6 +246,7 @@
   "do_not_delete": "Nemoj brisati",
   "domain": "Domena",
   "download": "Skinuti",
+  "download_at_verified_source": "",
   "download_started": "Preuzimanje je počelo",
   "downloaded": "Preuzeto",
   "downloaded_hash": "Preuzeti hash",
@@ -1028,6 +1030,5 @@
   "your_alias_sale_offer": "Ponudili ste ovaj pseudonim na prodaju.",
   "your_name": "Vaše ime",
   "your_passphrase": "Vaša lozinka",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "Welcome to Phoenix! Your recent account balances will appear here."
+  "youve_got_burst": "You've got Burst!"
 }
