--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -210,6 +210,7 @@
   "current_quantity": "當前數量",
   "current_version": "当前版本",
   "dashboard": "面板",
+  "dashboard_welcome_title": "欢迎来到凤凰城！您最近的帐户余额将显示在此处。",
   "data": "數據",
   "data_is_encrypted": "數據是加密的。",
   "date": "日期",
@@ -246,6 +247,7 @@
   "do_not_delete": "不，不要刪除",
   "domain": "域",
   "download": "下载",
+  "download_at_verified_source": "",
   "download_started": "下载开始了",
   "downloaded": "已下載",
   "downloaded_hash": "已下載的哈希",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "欢迎来到凤凰城！您最近的帐户余额将显示在此处。"
+  "youve_got_burst": "You've got Burst!"
 }
