--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -210,6 +210,7 @@
   "current_quantity": "現在の数量",
   "current_version": "現行版",
   "dashboard": "ダッシュ ボード",
+  "dashboard_welcome_title": "フェニックスへようこそ！最近の口座残高がここに表示されます。",
   "data": "データ",
   "data_is_encrypted": "データは暗号化されます。",
   "date": "日付",
@@ -246,6 +247,7 @@
   "do_not_delete": "いいえ、削除しないでください。",
   "domain": "ドメイン",
   "download": "ダウンロード",
+  "download_at_verified_source": "",
   "download_started": "ダウンロード開始",
   "downloaded": "ダウンロード済み",
   "downloaded_hash": "ダウンロードされたハッシュ",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
   "your_passphrase": "あなたのパスフレーズ",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "フェニックスへようこそ！最近の口座残高がここに表示されます。"
+  "youve_got_burst": "You've got Burst!"
 }
