--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -247,7 +247,7 @@
   "do_not_delete": "No, No Borrar",
   "domain": "Dominio",
   "download": "Descargar",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Descargar directamente de la fuente verificada",
   "download_started": "Descarga iniciada",
   "downloaded": "Descargado",
   "downloaded_hash": "Hash Descargado",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Ha puesto este alias a la venta.",
   "your_name": "Su Nombre",
   "your_passphrase": "Su Contraseña",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Tienes Burst!"
 }
