--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -247,7 +247,7 @@
   "do_not_delete": "No, No Eliminar",
   "domain": "Domini",
   "download": "descarregar",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Baixeu-vos directament des de l'origen verificat",
   "download_started": "La descàrrega es va iniciar",
   "downloaded": "Descarregat",
   "downloaded_hash": "Hash Descarregat",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Has posat aquest Àlies a la venta.",
   "your_name": "El vostre nom",
   "your_passphrase": "La vostre Contrasenya",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Tens Burst!"
 }
