--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Ne, nemazat",
   "domain": "Doména",
   "download": "Stažení",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Stáhnout přímo z ověřeného zdroje",
   "download_started": "Stahování bylo zahájeno",
   "downloaded": " Staženo",
   "downloaded_hash": "Stažený Hash",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Nabízíte tento alias na prodej.",
   "your_name": "Vaše jméno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Máte Burst!"
 }
