--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Ei, älä poista",
   "domain": "verkkotunnuksen",
   "download": "ladata",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Lataa suoraan todennetusta lähteestä",
   "download_started": "Lataa alkoi",
   "downloaded": "Ladattu",
   "downloaded_hash": "Ladattu tarkiste",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Tarjoat tätä aliasta myytäväksi.",
   "your_name": "Nimesi",
   "your_passphrase": "Tunnuslauseesi",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Sinulla on Burst!"
 }
