--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Ne pas supprimer",
   "domain": "Domaine",
   "download": "Télécharger",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Téléchargez directement à partir d'une source vérifiée",
   "download_started": "Le téléchargement a commencé",
   "downloaded": "Téléchargé",
   "downloaded_hash": "Hachage téléchargé",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Vous avez mis cet alias en vente.",
   "your_name": "Votre nom",
   "your_passphrase": "Votre phrase de passe",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Vous avez Burst!"
 }
