--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Nemoj brisati",
   "domain": "Domena",
   "download": "preuzimanje datoteka",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Preuzmite izravno iz provjerenog izvora",
   "download_started": "Preuzimanje je počelo",
   "downloaded": "Preuzeto",
   "downloaded_hash": "Preuzeti hash",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Ponudili ste ovaj pseudonim na prodaju.",
   "your_name": "Vaše ime",
   "your_passphrase": "Vaša lozinka",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Zaspao si!"
 }
