--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Nee, niet verwijderen",
   "domain": "Domein",
   "download": "Download",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Download rechtstreeks van geverifieerde bron",
   "download_started": "Downloaden is gestart",
   "downloaded": "Gedownload",
   "downloaded_hash": "Gedownloade Hash",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "U biedt deze alias te koop aan.",
   "your_name": "Uw naam",
   "your_passphrase": "Uw wachtwoord/passphrase",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Je hebt Burst!"
 }
