--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Não, Não Apagar",
   "domain": "Domínio",
   "download": "Baixar",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Baixar diretamente da fonte verificada",
   "download_started": "Download iniciado",
   "downloaded": "Descarregado",
   "downloaded_hash": "Hash Descarregado",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Você está oferecendo este alias para venda.",
   "your_name": "O Seu Nome",
   "your_passphrase": "A sua senha",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Você tem Burst!"
 }
