--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Нет, не удалять",
   "domain": "Домен",
   "download": "Скачать",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Скачать напрямую из проверенного источника",
   "download_started": "Загрузка началась",
   "downloaded": "Загружено",
   "downloaded_hash": "Загруженный хэш",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Вы предлагаете этот псевдоним для продажи.",
   "your_name": "Ваше имя",
   "your_passphrase": "Ваш пароль",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "У тебя есть взрыв!"
 }
