--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Nie, neodstraňovať",
   "domain": "doména",
   "download": "Stiahnuť ▼",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Stiahnite si ho priamo z overeného zdroja",
   "download_started": "Spustenie preberania",
   "downloaded": "Stiahnuté",
   "downloaded_hash": "Stiahnutý Hash",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Ponúkate tento alias na predaj.",
   "your_name": "Vaše Meno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Máte Burst!"
 }
