--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -247,7 +247,7 @@
   "do_not_delete": "Hayır, silme",
   "domain": "domain",
   "download": "İndir",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "Doğrudan doğrulanmış kaynaktan indirin",
   "download_started": "İndirme başladı",
   "downloaded": "İndirilenler",
   "downloaded_hash": "İndirilen Hash",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "Bu rumuzu satışa sunuyorsunuz.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "Patlama var!"
 }
