--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -247,7 +247,7 @@
   "do_not_delete": "不，不要刪除",
   "domain": "域",
   "download": "下载",
-  "download_at_verified_source": "",
+  "download_at_verified_source": "直接从已验证的源下载",
   "download_started": "下载开始了",
   "downloaded": "已下載",
   "downloaded_hash": "已下載的哈希",
@@ -1031,5 +1031,5 @@
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "你爆了！"
 }
