--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -210,6 +210,7 @@
   "current_quantity": "Nykyinen määrä",
   "current_version": "Nykyinen versio",
   "dashboard": "Päänäkymä",
+  "dashboard_welcome_title": "Tervetuloa Phoenixiin! Viimeisimmät tilisi saldot näkyvät täällä.",
   "data": "Data",
   "data_is_encrypted": "Tiedot on salattu.",
   "date": "Päivämäärä",
@@ -246,6 +247,7 @@
   "do_not_delete": "Ei, älä poista",
   "domain": "verkkotunnuksen",
   "download": "ladata",
+  "download_at_verified_source": "Lataa suoraan todennetusta lähteestä",
   "download_started": "Lataa alkoi",
   "downloaded": "Ladattu",
   "downloaded_hash": "Ladattu tarkiste",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "Tarjoat tätä aliasta myytäväksi.",
   "your_name": "Nimesi",
   "your_passphrase": "Tunnuslauseesi",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "Tervetuloa Phoenixiin! Viimeisimmät tilisi saldot näkyvät täällä."
+  "youve_got_burst": "Sinulla on Burst!"
 }
