--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -210,6 +210,7 @@
   "current_quantity": "Quantità attuale",
   "current_version": "Versione corrente",
   "dashboard": "Pannello di controllo",
+  "dashboard_welcome_title": "Benvenuti a Phoenix! I saldi dei conti recenti verranno visualizzati qui.",
   "data": "Dati",
   "data_is_encrypted": "Data is encrypted.",
   "date": "Data",
@@ -246,6 +247,7 @@
   "do_not_delete": "No, non eliminare",
   "domain": "Dominio",
   "download": "Scaricare",
+  "download_at_verified_source": "Scarica direttamente dalla fonte verificata",
   "download_started": "Download avviato",
   "downloaded": "Scaricato",
   "downloaded_hash": "Hash scaricato",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "Stai per mettere in vendita questo alias.",
   "your_name": "Il tuo nome",
   "your_passphrase": "La tua Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "Benvenuti a Phoenix! I saldi dei conti recenti verranno visualizzati qui."
+  "youve_got_burst": "Hai scoppiato!"
 }
