--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -210,6 +210,7 @@
   "current_quantity": "Quantidade Atual",
   "current_version": "Versão Atual",
   "dashboard": "Painel Administrativo",
+  "dashboard_welcome_title": "Bem-vindo ao Phoenix! Seus saldos recentes da conta serão exibidos aqui.",
   "data": "Dados",
   "data_is_encrypted": "Dados são criptografados.",
   "date": "Data",
@@ -246,6 +247,7 @@
   "do_not_delete": "Não, Não Apagar",
   "domain": "Domínio",
   "download": "Baixar",
+  "download_at_verified_source": "Baixar diretamente da fonte verificada",
   "download_started": "Download iniciado",
   "downloaded": "Recebido",
   "downloaded_hash": "Hash Baixado",
@@ -1033,6 +1035,5 @@
   "your_alias_sale_offer": "Você está oferecendo este pseudônimo para venda.",
   "your_name": "Seu nome",
   "your_passphrase": "Sua senha",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "Bem-vindo ao Phoenix! Seus saldos recentes da conta serão exibidos aqui."
+  "youve_got_burst": "Você tem Burst!"
 }
