--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -210,6 +210,7 @@
   "current_quantity": "Поточна кількість",
   "current_version": "Поточна версія",
   "dashboard": "Панель",
+  "dashboard_welcome_title": "Ласкаво просимо до Phoenix! Тут з’являться ваші останні залишки на рахунку.",
   "data": "Дані",
   "data_is_encrypted": "Дані зашифровані.",
   "date": "Дата",
@@ -246,6 +247,7 @@
   "do_not_delete": "Ні, не видаляти",
   "domain": "Домен",
   "download": "Завантажити",
+  "download_at_verified_source": "Завантажте безпосередньо з перевіреного джерела",
   "download_started": "Завантаження розпочато",
   "downloaded": "Завантажено",
   "downloaded_hash": "Звантаженій хеш",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "Ви пропонуєте цей псевдонім для продажу.",
   "your_name": "Твоє ім’я",
   "your_passphrase": "Ваша парольна фраза",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "Ласкаво просимо до Phoenix! Тут з’являться ваші останні залишки на рахунку."
+  "youve_got_burst": "У вас вибух!"
 }
