--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -210,6 +210,7 @@
   "current_quantity": "当前数量",
   "current_version": "当前版本",
   "dashboard": "面板",
+  "dashboard_welcome_title": "欢迎来到凤凰城！您最近的帐户余额将显示在此处。",
   "data": "数据",
   "data_is_encrypted": "数据是加密的。",
   "date": "日期",
@@ -246,6 +247,7 @@
   "do_not_delete": "不，不要删除",
   "domain": "域",
   "download": "下载",
+  "download_at_verified_source": "直接从已验证的源下载",
   "download_started": "下载开始了",
   "downloaded": "已下载",
   "downloaded_hash": "已下载的哈希",
@@ -1029,6 +1031,5 @@
   "your_alias_sale_offer": "您的该别名正在出售。",
   "your_name": "您的名称",
   "your_passphrase": "您的密码",
-  "youve_got_burst": "You've got Burst!",
-  "dashboard_welcome_title": "欢迎来到凤凰城！您最近的帐户余额将显示在此处。"
+  "youve_got_burst": "你爆了！"
 }
