feat(mobile): add node selector

--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -179,6 +179,7 @@
         "confirmReset": "Вы уверены? Вы не можете отменить это действие.",
         "confirmErase": "Удалить и сбросить",
         "changeLanguage": "Выбрать язык",
+        "selectNode": "Select Node",
         "copyright": "Copyright © Burst Apps Team"
       }
     }
