--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -180,6 +180,7 @@
         "confirmReset": "Are you sure? You cannot undo this action.",
         "confirmErase": "Confirm - Erase and Reset",
         "changeLanguage": "Select Language",
+        "selectNode": "Select Node",
         "copyright": "Copyright © Burst Apps Team"
       }
     }
